@@ -4,8 +4,9 @@ Revision history for Bio-miRNAture
         # Updates
         - Support of multiple runs at the same time without I/O temporal files collision.
         - Automatic creation of output folder declared on the -w flag.
-        - Inclusion of a global alignment to validate structural curated sequences in
-          comparison to reference covariance model.
+        - Inclusion of a global alignment (cmsearch -g) to validate structural curated sequences in
+          comparison to reference covariance model (from structural evaluation if available or 
+          used on the homology stage).
         - Extension of homology fasta sequences before structural validation with MIRfix.
         # Corrected bugs
         - Temporal file folders moved to TemporalFiles/ folder.
